Virtual Human project HCI Proff GRM Reddy

--- a/blend_sad.html
+++ b/blend_sad.html
@@ -14,9 +14,9 @@
 <div id="header_panel">
 <div id="header_section">
        <div id="title">
-           vHuman (HCI Project)
+           vHuman
       </div>
-     
+     <p>HCI Project: Mentored by Prof. G R M Reddy </p>
 </div>
 </div>
  <!------------------------------------------------------------- end of header ------------------------------------------------------->
@@ -42,7 +42,7 @@
 <!--------------------------------------------------------------Video container starts-------------------------------------------------------->           
                     <div id="container">
 		<div id="containertop"></div>
-		<h1>Current Video</h1>
+		<h1>Sad</h1>
 	                   
 		  <video id="my_video" width="890" height="600" playsinline controls autoplay loop muted>
 		 <source src="videos/sad.mp4" type="video/mp4">
