--- a/blend.html
+++ b/blend.html
@@ -14,9 +14,9 @@
 <div id="header_panel">
 <div id="header_section">
        <div id="title">
-           vHuman (HCI Project)
+           vHuman
       </div>
-     
+     <p>HCI Project: Mentored by Prof. G R M Reddy </p>
 </div>
 </div>
  <!------------------------------------------------------------- end of header ------------------------------------------------------->
@@ -42,10 +42,10 @@
 <!--------------------------------------------------------------Video container starts-------------------------------------------------------->           
                     <div id="container">
 		<div id="containertop"></div>
-		<h1>Current Video</h1>
+<h1>Angry</h1>
 	                   
 		  <video id="my_video" width="890" height="600" playsinline controls autoplay loop muted>
-		 <source src="videos/neutral.mp4" type="video/mp4">
+		 <source src="videos/angry.mp4" type="video/mp4">
 		</video>
 			<!--<img src="images/main_image.jpg" width="930" height="450" alt="Main Image" />-->
 			
