--- a/emotion.html
+++ b/emotion.html
@@ -13,9 +13,9 @@
 <div id="header_panel">
 <div id="header_section">
        <div id="title">
-           V R human
+           vHuman
       </div>
-     
+     <p>HCI Project: Mentored by Prof. G R M Reddy </p>
 </div>
 </div>
  <!------------------------------------------------------------- end of header ------------------------------------------------------->
