--- a/index.html
+++ b/index.html
@@ -56,17 +56,10 @@
               <!-- -------------------------------------------------The 3 Banner starts-------------------------------------->
 		<div id="banner_wrapper">
 			<div class="banner">
-				<h2>Submarine</h2>
-				<div class="image_wrapper"><a href = "index1.html"><img src="images/submarine.jpg" width="228" height="202" alt="image: Zen Gardens" /></a><span></span></div>
+				<h2>Submarine: Test project for Blender.</h2>
+				<div class="image_wrapper"><a href = "index1.html"><img src="images/submarine.JPG" width="228" height="202" alt="image: Zen Gardens" /></a><span></span></div>
 			</div>
-			<div class="banner">
-				<h2></h2>
-				<div class="image_wrapper"><img src="images/zengardens.jpg" width="228" height="202" alt="image: Organic Plants" /><span></span></div>
-			</div>
-			<div class="banner banner_last">
-				<h2></h2>
-				<div class="image_wrapper"><img src="images/zengardens.jpg" width="228" height="202" alt="image: Organic Gardens" /><span></span></div>
-			</div>
+			
 			
 		</div>
                <!-- -------------------------------------------The 3 Banner ends------------------------------------------->
