--- a/emotion.html
+++ b/emotion.html
@@ -44,15 +44,15 @@
 	<h1 align="center">Emotions</h1>       
 	 <table class="product_table" cellspacing="3">
 	<tr class="ptable_img" align="left">
-	<td class="ptable_img1"><img src="images/smile.png" align="left" width="300" height="205"></td>
-	<td class="ptable_img1"><img src="images/sad.png" align="left" width="300" height="205"></td>	
+	<td class="ptable_img1"><img src="images/smile.PNG" align="left" width="300" height="205"></td>
+	<td class="ptable_img1"><img src="images/sad.PNG" align="left" width="300" height="205"></td>	
 	</tr>
 	<tr>
 	<td> <h3 class="P_list"><br>&emsp;&emsp;Smile</h3></td>
 	<td> <h3 class="P_list"><br>&emsp;&emsp;Sad</h3></td>
 	</tr>
 	<tr class="ptable_img" align="left">
-	<td class="ptable_img1"><img src="images/fear.png" align="left" width="300" height="205"></td>
+	<td class="ptable_img1"><img src="images/fear.PNG" align="left" width="300" height="205"></td>
 	<td class="ptable_img1"><img src="images/threaten.png" align="left" width="300" height="205"></td>	
 	</tr>
 	<tr>
@@ -60,7 +60,7 @@
 	<td> <h3 class="P_list"><br>&emsp;&emsp;Threaten</h3></td>
 	</tr>
 	<tr class="ptable_img" align="left">
-	<td class="ptable_img1"><img src="images/anger.png" align="left" width="300" height="205"></td>
+	<td class="ptable_img1"><img src="images/anger.PNG" align="left" width="300" height="205"></td>
 	<td class="ptable_img1"><img src="images/scream.png" align="left" width="300" height="205"></td>	
 	</tr>
 	<tr>
