--- a/about.html
+++ b/about.html
@@ -54,16 +54,16 @@
    <h1>Our team</h1>
    <table id="list"  width="100%">                         
      <tr>
-<td><img src="images/1.jpg" align="left" width="98" height="105">&emsp;<p>&emsp;&emsp;Mr. Anantha K S is the Team Lead of this Human Computer Interaction Project. He has Designed the Blender Game & implemented Emotions and Expressions <br><br>&emsp;&emsp;and done documentation.<br><br>&emsp;&emsp;Email : anantha.aks@gmail.com, <br><br>&emsp;&emsp;Mobile # : 123456789.</p> 
+<td><img src="images/1.jpg" align="left" width="98" height="105">&emsp;<p>&emsp;&emsp;Mr. Anantha K S has contributed in the Proof of concept for the tools and methodologies used. <br><br>&emsp;&emsp;and done documentation.<br><br>&emsp;&emsp;Email : anantha.aks@gmail.com, <br><br>&emsp;&emsp;Mobile # : 123456789.</p> 
 </td></tr>
 <tr>
-<td><img src="images/2.jpg" align="left" width="98" height="102">&emsp;<p>&emsp;&emsp;Mr. Amimul Ehsan is one of the important member of this Human Computer Interaction Project. He has Designed the website as well as Human Model &<br><br>&emsp;&emsp;implemented Emotions and Expressions.<br><br>&emsp;&emsp;Email : amimul.ehsaan@gmail.com, <br><br>&emsp;&emsp;Mobile # : 9035227544.</p> 
+<td><img src="images/2.jpg" align="left" width="98" height="102">&emsp;<p>&emsp;&emsp;Mr. Amimul Ehsan has Designed the website as well as Human Model &<br><br>&emsp;&emsp;implemented Emotions and Expressions.<br><br>&emsp;&emsp;Email : amimul.ehsaan@gmail.com, <br><br>&emsp;&emsp;Mobile # : 9035227544.</p> 
 </td></tr>
 <tr>
-<td><img src="images/3.jpg" align="left" width="98" height="102">&emsp;<p>&emsp;<p>&emsp;&emsp;Mr. Nitish Kumar is the Team member of this Human Computer Interaction Project. He has done basic modelling & documentations.<br><br>&emsp;&emsp;Email : anantha.aks@gmail.com, <br><br>&emsp;&emsp;Mobile # : 123456789.</p> 
+<td><img src="images/3.jpg" align="left" width="98" height="102">&emsp;<p>&emsp;<p>&emsp;&emsp;Mr. Nitish Kumar has done the documentations.<br><br>&emsp;&emsp;Email : anantha.aks@gmail.com, <br><br>&emsp;&emsp;Mobile # : 123456789.</p> 
 </td></tr>
 <tr>
-<td><img src="images/4.jpg" align="left" width="98" height="102">&emsp;<p>&emsp;<p>&emsp;&emsp;Mr. S Vignesh is the Team member of this Human Computer Interaction Project. He has done the documentations.<br><br>&emsp;&emsp;Email : anantha.aks@gmail.com, <br><br>&emsp;&emsp;Mobile # : 123456789.</p> 
+<td><img src="images/4.jpg" align="left" width="98" height="102">&emsp;<p>&emsp;<p>&emsp;&emsp;Mr. S Vignesh has done the documentations.<br><br>&emsp;&emsp;Email : anantha.aks@gmail.com, <br><br>&emsp;&emsp;Mobile # : 123456789.</p> 
 </td>
 </tr>
          </table>
