--- a/compare.html
+++ b/compare.html
@@ -72,7 +72,7 @@
 	</tr>
 	<tr class="ptable_img3">
 	<td class="ptable_img2"> <h2>Threaten</h2></td>
-	<td class="ptable_img1"><img src="Add/threaten.PNG" align="center" width="300" height="205"></td>
+	<td class="ptable_img1"><img src="images/threaten.PNG" align="center" width="300" height="205"></td>
 	<td class="ptable_img1"><img src="images/122.jpg" align="left" width="98" height="105"></td>
 	</tr>
 	
