--- a/compare.html
+++ b/compare.html
@@ -72,8 +72,8 @@
 	</tr>
 	<tr class="ptable_img3">
 	<td class="ptable_img2"> <h2>Threaten</h2></td>
-	<td class="ptable_img1"><img src="add/threaten.png" align="center" width="300" height="205"></td>
-	<td class="ptable_img1"><img src="images/122.jpg" align="left" width="98" height="105"></td>
+	<td class="ptable_img1"><img src="Add/threaten.png" align="center" width="300" height="205"></td>
+	<td class="ptable_img1"><img src="Add/real_threaten.jpg" align="left" width="98" height="105"></td>
 	</tr>
 	
          </table>
