--- a/compare.html
+++ b/compare.html
@@ -73,7 +73,7 @@
 	<tr class="ptable_img3">
 	<td class="ptable_img2"> <h2>Threaten</h2></td>
 	<td class="ptable_img1"><img src="Add/threaten.png" align="center" width="300" height="205"></td>
-	<td class="ptable_img1"><img src="Add/real_threaten.jpg" align="left" width="98" height="105"></td>
+	<td class="ptable_img1"><img src="Add/real_threaten.jpg" align="center" width="250" height="205"></td>
 	</tr>
 	
          </table>
