--- a/emotion.html
+++ b/emotion.html
@@ -53,7 +53,7 @@
 	</tr>
 	<tr class="ptable_img" align="left">
 	<td class="ptable_img1"><img src="images/fear.PNG" align="left" width="300" height="205"></td>
-	<td class="ptable_img1"><img src="images/threaten.png" align="left" width="300" height="205"></td>	
+	<td class="ptable_img1"><img src="images/threaten.PNG" align="left" width="300" height="205"></td>	
 	</tr>
 	<tr>
 	<td> <h3 class="P_list"><br>&emsp;&emsp;Fear</h3></td>
